# gstr2b_tallyVersionHandling

./: .gitignore  .replit  app.py  gst_portal_json_generator.py  gst_processor.py  gst_tally_xml_generator.py  gstr2b_dedicated_processor.py  gstr2b_masters_xml.py  gstr2b_transactions_xml.py  invoice_extractor.py  invoice_xml_generator.py  pyproject.toml  replit.md  tally_xml_generator.py  transaction_extractor.py
